# FOX

./: .gitignore  README.md  generate_tree.sh  pyproject.toml  temp_testing_SG_Filter.py  temp_testing_exclusion_plot.py  temp_testing_power_values.py  test.py
axion_haloscope/: __init__.py  baseline.py  bootstrapping.py  cli.py  cli_example.sh  combine.py  config.py  data_quality.py  detection.py  downmixing.py  external_noise.py  filter.py  graphs.py  how_to_replace_lineshape.py  io.py  limit.py  lineshape.py  noise.py  rebin.py  run_pipeline.py  simulation.py  simulation_working.py  wavepacket.py  width_fq.py
axion_haloscope/tests/: test_detection.py
configs/: read_data_and_qc_only.yaml  simulate_run.yaml  simulate_run_blue_version.yaml  simulate_run_haystack.yaml  simulate_run_working.yaml  simulate_spectra_only.yaml
scripts/: full_chain_template.py  read_npz_pipeline.py  read_spectra_npz.py  simulate_run.py
scripts/simulation/: simulate_run_yaml.py  simulate_run_yaml_blue.py  simulate_run_yaml_blue_ultra_version.py  simulate_run_yaml_working.py  simulate_single_spectra.py  simulate_single_spectra_yaml.py
tests/: test_baseline.py  test_combine.py  test_data_quality.py  test_io_hdf5.py  test_lineshape.py  test_simulation_plot.py  test_simulation_smoke.py
